--- a/credit-card-website/src/app/addcredit/addcredit.component.css
+++ b/credit-card-website/src/app/addcredit/addcredit.component.css
@@ -1,52 +1,48 @@
-body {
-  background-color: #003087; 
-  font-family: Arial, sans-serif;
-  color: #ffffff; 
-  margin: 0;
-  padding: 0;
-}
-
 .container {
   max-width: 600px;
-  margin: 50px auto;
-  padding: 20px;
-  background-color: #f7f7f7;
+  margin: 50px auto; 
+  padding: 10px;
+  background-color: #ffffff; 
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  color: #003087; 
 }
 
 h2 {
-  color: #003087;
-  text-align: center;
-  margin-bottom: 20px;
+  font-size: 30px; 
+  color: #003087; 
+  text-align: center; 
+  margin-bottom: 30px;
+  font-weight: bold;
 }
 
 .form-group {
-  margin-bottom: 15px;
+  margin-bottom: 0px;
 }
 
 label {
-  color: #003087;
+  color: #000000;
   font-weight: bold;
   display: block;
-  margin-bottom: 5px;
+  margin-bottom: 1px;
 }
 
 input[type="text"], 
 input[type="password"], 
 input[type="email"] {
-  width: 100%;
-  padding: 10px;
+  width: 98%;
+  padding: 3px;
   border: 1px solid #c1c1c1;
-  border-radius: 5px;
+  border-radius: 1px;
   font-size: 14px;
-  background-color: #ffffff;
+  background-color: #f7f7f7; 
+  color: #000000; 
 }
 
 input[type="text"]:focus, 
 input[type="password"]:focus, 
 input[type="email"]:focus {
-  border-color: #009cde;
+  border-color: #009cde; 
   outline: none;
   box-shadow: 0 0 5px rgba(0, 156, 222, 0.5);
 }
@@ -61,7 +57,7 @@ small {
 }
 
 button.addButton {
-  background-color: #009cde;
+  background-color: #009cde; 
   color: white;
   font-weight: bold;
   padding: 10px 20px;
@@ -70,10 +66,11 @@ button.addButton {
   cursor: pointer;
   width: 100%;
   transition: background-color 0.3s ease;
+  font-size: 16px;
 }
 
 button.addButton:hover {
-  background-color: #003087;
+  background-color: #005ea6;
 }
 
 button.addButton:disabled {
