--- a/credit-card-website/src/app/addcredit/addcredit.component.html
+++ b/credit-card-website/src/app/addcredit/addcredit.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <h2>Add Credit Card</h2>
     <form [formGroup]="addCreditForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="card_number">Card Number</label>
@@ -58,6 +59,6 @@
             </div>
         </div>
 
-        <button type="submit" class="addButton" [disabled]="addCreditForm?.invalid">Add Card</button>
+        <button type="submit" class="addButton">Add Card</button>
     </form>
 </div>
