--- a/credit-card-website/src/app/addcredit/addcredit.component.html
+++ b/credit-card-website/src/app/addcredit/addcredit.component.html
@@ -61,4 +61,13 @@
 
         <button type="submit" class="addButton">Add Card</button>
     </form>
+      <!-- Success message -->
+  <div *ngIf="submissionSuccess" class="alert alert-success">
+    Credit card added successfully!
+  </div>
+
+  <!-- Error message -->
+  <div *ngIf="submissionError" class="alert alert-danger">
+    Failed to add credit card. Please try again.
+  </div>
 </div>
