--- a/credit-card-client/src/app/app.component.html
+++ b/credit-card-client/src/app/app.component.html
@@ -1,12 +1,11 @@
 <nav>
-    <ul>
-      <li><a routerLink="/">Home</a></li>
-      <li><a routerLink="/creditcardlist">Credit Card List</a></li>
-      <li><a routerLink="/addcredit">Add Credit</a></li>
-      <li><a routerLink="/transactionslist">Transactions List</a></li>
-      <li><a routerLink="/transactionsscreen">Transactions Screen</a></li>
-    </ul>
-  </nav>
-  
-  <router-outlet/>
-  
+  <ul>
+    <li><a routerLink="/">Home</a></li>
+    <li><a routerLink="/credit-card-list">Credit Card List</a></li>
+    <li><a routerLink="/add-credit-card">Add Credit</a></li>
+    <li><a routerLink="/transaction-list">Transactions List</a></li>
+    <li><a routerLink="/transactions">Transactions Screen</a></li>
+  </ul>
+</nav>
+
+<router-outlet/>
