--- a/credit-card-client/src/app/app.component.css
+++ b/credit-card-client/src/app/app.component.css
@@ -1,13 +1,15 @@
 nav {
-    background-color: #003087;
-    padding: 1rem;
-  }
+  background-color: #003087; 
+  padding: 1rem; 
+}
   
-  nav ul {
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-  }
+nav ul {
+  list-style: none; 
+  display: flex; 
+  justify-content: space-around; 
+  margin: 0; 
+  padding: 0;
+}
   
   nav ul li {
     margin: 0 1rem;
@@ -15,11 +17,22 @@ nav {
   
   nav ul li a {
     color: white;
-    text-decoration: none;
-    font-weight: bold;
+    text-decoration: none; 
+    font-weight: bold; 
+    font-size: 1rem; 
+    padding: 0.5rem; 
+    border-radius: 5px; 
+    transition: background-color 0.3s ease; 
   }
+
+ nav ul li a:hover {
+  text-decoration: underline; 
+  background-color: #000329; 
+  color: white; 
+}
   
-  nav ul li a:hover {
-    text-decoration: underline;
-  }
-  
+nav ul li a.active {
+  background-color: #179bd7; 
+  color: white; 
+  font-weight: bold;
+}
