--- a/credit-card-client/src/app/home/home.component.html
+++ b/credit-card-client/src/app/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<section class="hero">
+    <div class="hero-content">
+      <h1>Welcome to Mikopay</h1>
+      <p>Manage your credit cards and transactions seamlessly.</p>
+    <div class="background-container" [ngClass]="currentImage"></div>
+  </div>
+</section>
