--- a/credit-card-client/src/app/app.component.html
+++ b/credit-card-client/src/app/app.component.html
@@ -1,11 +1,21 @@
 <nav>
   <ul>
-    <li><a routerLink="/">Home</a></li>
-    <li><a routerLink="/credit-card-list">Credit Card List</a></li>
-    <li><a routerLink="/add-credit-card">Add Credit</a></li>
-    <li><a routerLink="/transaction-list">Transactions List</a></li>
-    <li><a routerLink="/transactions">Transactions Screen</a></li>
+    <li>
+      <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a>
+    </li>
+    <li>
+      <a routerLink="/credit-card-list" routerLinkActive="active">Credit Card List</a>
+    </li>
+    <li>
+      <a routerLink="/add-credit-card" routerLinkActive="active">Add Credit</a>
+    </li>
+    <li>
+      <a routerLink="/transaction-list" routerLinkActive="active">Transactions List</a>
+    </li>
+    <li>
+      <a routerLink="/transactions" routerLinkActive="active">Transactions Screen</a>
+    </li>
   </ul>
 </nav>
 
-<router-outlet/>
+<router-outlet></router-outlet>
