--- a/credit-card-client/src/styles.css
+++ b/credit-card-client/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background-image: linear-gradient(to left, #74bee0, #5f75da);
+  }
