--- a/credit-card-client/src/app/add-credit-card/add-credit-card.component.css
+++ b/credit-card-client/src/app/add-credit-card/add-credit-card.component.css
@@ -6,14 +6,15 @@
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     color: #003087; 
+    font-family: Arial, sans-serif;
   }
   
   h2 {
-    font-size: 30px; 
-    color: #003087; 
-    text-align: center; 
+    color: #003087;
+    text-align: center;
+    font-size: 2.5rem;
     margin-bottom: 30px;
-    font-weight: bold;
+    font-family: Arial, sans-serif;
   }
   
   .form-group {
