--- a/credit-card-client/src/app/credit-card-list/credit-card-list.component.css
+++ b/credit-card-client/src/app/credit-card-list/credit-card-list.component.css
@@ -27,7 +27,9 @@ html, body {
 h2 {
     color: #003087;
     text-align: center;
-}
+    font-size: 2.5rem;
+    margin-bottom: 10px;
+  }
 
 .filter-section {
     display: flex;
