--- a/credit-card-client/src/app/transactions/transactions.component.html
+++ b/credit-card-client/src/app/transactions/transactions.component.html
@@ -1,37 +1,31 @@
 <div class="transactions-container">
     <h1>Transactions</h1>
-  
+
     <!-- Filter Section -->
     <div class="filter-section">
         <input type="text" placeholder="Filter by card number" [(ngModel)]="filterCardNumber">
         <button (click)="filterTransactions()">Filter</button>
     </div>
-  
-    <!-- Transaction List -->
-    <table class="transactions-table">
-        <thead>
-            <tr>
-                <th>Credit Card</th>
-                <th>Amount</th>
-                <th>Currency</th>
-                <th>Comment</th>
-                <th>Date</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let transaction of filteredTransactions">
-                <td>{{ transaction.credit_card }}</td>
-                <td>{{ transaction.amount }}</td>
-                <td>{{ transaction.currency }}</td>
-                <td>{{ transaction.comment }}</td>
-                <!--<td>{{ transaction.date | date }}</td>-->
-                <td><button (click)="removeTransaction(transaction)">Remove</button></td>
-            </tr>
-        </tbody>
-    </table>
-  
-    <!-- Add New Transaction Button -->
-    <button class="add-transaction-btn" (click)="addTransaction()">Add Transaction</button>
-  </div>
-  
+
+    <!-- Add Transaction Form -->
+    <div *ngIf="isAddFormVisible" class="add-transaction-form">
+        <h2>Add New Transaction</h2>
+        <input type="text" placeholder="Credit Card" [(ngModel)]="newTransaction.credit_card">
+        <input type="number" placeholder="Amount" [(ngModel)]="newTransaction.amount">
+        <input type="text" placeholder="Currency" [(ngModel)]="newTransaction.currency">
+        <input type="text" placeholder="Comment" [(ngModel)]="newTransaction.comment">
+        <input type="date" placeholder="Date" [(ngModel)]="newTransaction.date">
+        <button (click)="addTransaction()">Submit</button>
+    </div>
+
+    <!-- Toggle Add Transaction Button -->
+    <button class="add-transaction-btn" (click)="toggleAddForm()">
+        {{ isAddFormVisible ? 'Cancel' : 'Add Transaction' }}
+    </button>
+
+    <!-- Transaction List Component -->
+    <app-transaction-list
+      [transactions]="filteredTransactions"
+      (onRemoveTransaction)="removeTransaction($event)">
+    </app-transaction-list>
+</div>
