--- a/credit-card-client/src/app/credit-card-list/credit-card-list.component.html
+++ b/credit-card-client/src/app/credit-card-list/credit-card-list.component.html
@@ -4,20 +4,20 @@
         
         <div class="filter-section">
             <input type="text" placeholder="Filter by cardholder name..." [(ngModel)]="filterText" />
-            <button (click)="filterCards()">Filter</button>
+            <button (click)="filterCards()">Load</button>
         </div>
 
         <ul class="card-list">
-            <li *ngFor="let card of creditCards" (click)="onCardClick(card.card_number)">
+           
+            <li *ngFor="let card of filteredCards" (click)="onCardClick(card.card_number)">
                 <strong>Cardholder:</strong> {{ card.cardholder_name }} <br />
                 <strong>Issuer:</strong> {{ card.issuer }} <br />
                 <strong>Card Number:</strong> {{ card.card_number }}
-                <button class="details-btn" (click)="viewDetails(card.card_number)">Details</button>
             </li>
         </ul>
     </div>
 
     <div class="background-container"> 
-        
+       
     </div>
 </div>
