Rettet fejl i transactionscreen component

--- a/credit-card-client/src/app/transactions/transactions.component.html
+++ b/credit-card-client/src/app/transactions/transactions.component.html
@@ -1,27 +1,31 @@
 <div class="transactions-container">
-    <h1>Transactions</h1>
-  
-    <div *ngIf="isAddFormVisible" class="add-transaction-form">
-      <h2>Add New Transaction</h2>
-      <input type="text" placeholder="Credit Card" [(ngModel)]="newTransaction.credit_card">
-      <input type="number" placeholder="Amount" [(ngModel)]="newTransaction.amount">
-      <input type="text" placeholder="Currency" [(ngModel)]="newTransaction.currency">
-      <input type="text" placeholder="Comment" [(ngModel)]="newTransaction.comment">
-      <input type="date" placeholder="Date" [(ngModel)]="newTransaction.date">
-      <button (click)="addTransaction()">Submit</button>
-    </div>
-  
-    <button class="add-transaction-btn" (click)="toggleAddForm()">
-      {{ isAddFormVisible ? 'Cancel' : 'Add Transaction' }}
-    </button>
-  
-    <button class="hide-list-btn" (click)="toggleTransactionList()">
-      {{ isListVisible ? 'Hide List' : 'Show List' }}
-    </button>
-  
-    <app-transaction-list *ngIf="isListVisible" 
-      [transactions]="filteredTransactions"
-      (onRemoveTransaction)="removeTransaction($event)">
-    </app-transaction-list>
+  <h1>Transactions</h1>
+
+  <div *ngIf="isAddFormVisible" class="add-transaction-form">
+    <h2>Add New Transaction</h2>
+    <input type="text" placeholder="Credit Card" [(ngModel)]="newTransaction.credit_card">
+    <input type="number" placeholder="Amount" [(ngModel)]="newTransaction.amount">
+    <input type="text" placeholder="Currency" [(ngModel)]="newTransaction.currency">
+    <input type="text" placeholder="Comment" [(ngModel)]="newTransaction.comment">
+    <input type="date" placeholder="Date" [(ngModel)]="newTransaction.date">
+    <button (click)="addTransaction()">Submit</button>
   </div>
-  
+
+  <button class="add-transaction-btn" (click)="toggleAddForm()">
+    {{ isAddFormVisible ? 'Cancel' : 'Add Transaction' }}
+  </button>
+
+  <div class="filter-section">
+      <input type="text" [(ngModel)]="filterCardNumber" placeholder="Enter Card Number to Filter">
+      <button (click)="filterTransactionsCard(filterCardNumber)">Filter by Card Number</button>
+  </div>
+
+  <button class="hide-list-btn" (click)="toggleTransactionList()">
+    {{ isListVisible ? 'Hide List' : 'Show List' }}
+  </button>
+
+  <app-transaction-list *ngIf="isListVisible" 
+    [transactions]="filteredTransactions"
+    (onRemoveTransaction)="removeTransaction($event)">
+  </app-transaction-list>
+</div>
